lintian (2.5.63) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/binaries.{pm,desc}:
    + [CL] Add an experimental check for development packages that ship
      ELF binaries in $PATH. Host architecture binaries are generally not
      executable so such files are useless for cross builds.
      (Closes: #794295)
  * checks/source-copyright.desc:
    + [CL] Update description of source-includes-file-in-files-excluded
      to clarify the potential problem and to reference the relevant
      wishlist bug against git-buildpackage.
  * checks/python.pm:
    + [CL] Clarify that new-package-should-not-package-python2-module
      triggers when there is a single changelog entry as well as providing
      general guidance where upstreams have not ported to Python 3 yet.

  * commands/lintian.pm:
    + [CL] Correct parsing of "jobs=42" in lintianrc. If specified, it
      would be coerced to a boolean resulting in a value of 1.
    + [CL] Allow the tag display limit to be configured via the
      "--tag-display-limit" command-line argument or "tag-display-limit"
      in lintianrc.  (Closes: #813525)
    + [CL] Make -v imply --no-tag-display-limit.  (Closes: #812756)

  * doc/lintianrc.example:
    + [CL] Add missing "jobs" entry.

 -- Chris Lamb <lamby@debian.org>  Thu, 07 Dec 2017 16:51:09 +0000

lintian (2.5.62) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - invalid-potfiles-in

  * checks/changelog-file.pm:
    + [CL] Correct operator precedence in "epoch-change-without-comment"
      to prevent a false positive when an epoch is present but is unchanged
      between versions.
    + [CL] Improve output of epoch-change-without-comment to include the
      actual version change.
  * checks/python.desc:
    + [CL] Also match, for example, "python2.7:any" when checking the
      "dependency-on-python-version-marked-for-end-of-life" tag, not just
      "python2.7".  (Closes: #883053)