@@ -1,0 +1,3 @@
+E: libfoo-dev: multiarch-foreign-cmake-file usr/lib/x86_64-linux-gnu/cmake/foo.cmake
+E: libfoo-dev: multiarch-foreign-pkgconfig usr/lib/x86_64-linux-gnu/pkgconfig/libfoo.pc
+E: libfoo-dev: multiarch-foreign-static-library usr/lib/x86_64-linux-gnu/libfoo.a
