@@ -7,6 +7,11 @@ lintian (2.5.63) UNRELEASED; urgency=medium
       ELF binaries in $PATH. Host architecture binaries are generally not
       executable so such files are useless for cross builds.
       (Closes: #794295)
+  * checks/files.{pm,desc}:
+    + [CL] Warn about Multi-Arch: foreign packages that ship CMake,
+      pkg-config or static libraries in public, architecture-dependent
+      search paths. Thanks to Helmut Grohne for the initial patch and
+      report.  (Closes: #882684)
   * checks/source-copyright.desc:
     + [CL] Update description of source-includes-file-in-files-excluded
       to clarify the potential problem and to reference the relevant
